--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,10 @@ buildscript {
         maven {
             allowInsecureProtocol = true
             url "http://af.hikvision.com.cn:80/artifactory/maven-down/"
+            credentials {
+                username "maven-down"
+                password "maven-down"
+            }
         }
         maven {
             allowInsecureProtocol = true
@@ -27,6 +31,10 @@ rootProject.allprojects {
         maven {
             allowInsecureProtocol = true
             url "http://af.hikvision.com.cn:80/artifactory/maven-down/"
+            credentials {
+                username "maven-down"
+                password "maven-down"
+            }
         }
         maven {
             allowInsecureProtocol = true
